--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/button" android:layout_marginTop="31dp"
             app:layout_constraintTop_toBottomOf="@+id/editText2" android:layout_marginEnd="1dp"
-            app:layout_constraintEnd_toEndOf="@+id/editText2"/>
+            app:layout_constraintEnd_toEndOf="@+id/editText2"
+            android:onClick="buttonOnClickValidacao"/>
     <Button
             android:text="Sair"
             android:layout_width="wrap_content"
